# ctint-science

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  NamingConventions.md  README.md  README.rst  cppcheck.sh  format.sh
examples/U14_b16.67/: hyb1.arma  params1.json
examples/U3_b10/: hyb1.arma  params1.json  run_dmft.sh
files/: hyb1.arma  hyb4.arma  params1.json  params4.json
include/ctint-science/: FS.hpp  Fourier.hpp  GreenTau.hpp  SelfConsistency.hpp  Utilities.hpp
snap/: snapcraft.yaml
src/: Utilities.cpp  ctint-science.cpp  dmft.cpp
src/Includes/: Fourier.hpp  GreenMat.hpp  ISData.hpp  MarkovChain.hpp  Model.hpp  MonteCarloNew.hpp  Observables.hpp  SelfConsistency.hpp  Utilities.hpp
